--- a/HealthApp/build.gradle
+++ b/HealthApp/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
 	compile project(':JPAHealth')
+	implementation ('org.springframework.boot:spring-boot-starter-tomcat')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
@@ -27,4 +28,10 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+apply plugin: 'war'
+war {
+  enabled = true
+  archiveName = "${baseName}.war"     // Our app name, as defined in settings.gradle
+  destinationDir = file("./")         // Project root directory
 }
