--- a/HealthApp/src/main/resources/application.properties
+++ b/HealthApp/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #### PORT CONFIG ####
 ##### Alternate Tomcat port
 server.port=8081
+spring.jmx.default-domain=HealthApp
 
 
 #### JSP VIEW RESOLVER ####
